--- a/all.yml
+++ b/all.yml
@@ -4,46 +4,39 @@
   roles:
 
   - role: computername
-    computername: VM
-
-  - role: git_config
-    git_user_mail: ninja@ninjabong.com
-    git_user_name: ninjabong
+    computername: sakura
 
   - role: sshd
     sshd: "on"
 
   - role: datetime
-    time_zone: America/New_York
+    time_zone: Europe/Stockholm
 
   - role: desktop_image
-    desktop_img_path: "http://static.simpledesktops.com/uploads/desktops/2014/07/29/eamessimple.png"
+    desktop_img_path: "http://static.simpledesktops.com/uploads/desktops/2014/06/08/PixelYosemite.png"
 
   - role: googlefonts
     fonts:
       - inconsolata
       - sourcecodepro
 
-  - role: user_image
-    image_name: ninjastar.jpg
-
-  - role: gatekeeper
-    gatekeeper: disable
-
-  - role: locatedb
-    locatedb: load
-
   - role: unhide_library
 
-  - role: cask_env_package
-    package_name: textmate
-    homebrew_cask_opts: --appdir=/Applications
+  - role: homebrew
+
+  - name: homebrew cask
+    homebrew: name=caskroom/cask/brew-cask state=present
+
+  - name: Install casks
+    homebrew_cask: name="{{ item }}" state=present
+    with_items:
+      - alfred
+      - iterm2
 
   - role: dock
     apps:
     - "/Applications/System Preferences.app"
-    - /Applications/Utilities/Terminal.app
-    - /Applications/TextMate.app
+    - /Applications/Utilities/iTerm2.app
     - /Applications/Safari.app
     folders:
     - path: ~/src/github.com
