removed googlefonts role and enabled homebrew cask fonts. added sys prefs

--- a/all.yml
+++ b/all.yml
@@ -15,10 +15,19 @@
   - role: desktop_image
     desktop_img_path: "http://static.simpledesktops.com/uploads/desktops/2014/06/08/PixelYosemite.png"
 
-  - role: googlefonts
-    fonts:
-      - inconsolata
-      - sourcecodepro
+
+  # System Preferences - General
+  - role: systemprefs_general
+    system_appearance: graphite
+    highlight_color: "1.000000 0.874510 0.701961"
+    sidebar_icon_size: medium
+    scrollbar: Automatic
+    scroll_behavior: page
+    close_confirms_changes: no
+    restore_windows: no
+    kb_ui_mode: all
+    # only works for 10.10
+    #interface_style: Dark
 
   - role: unhide_library
 
@@ -27,11 +36,16 @@
   - name: homebrew cask
     homebrew: name=caskroom/cask/brew-cask state=present
 
+  - homebrew_tap: tap=caskroom/fonts state=present
+
   - name: Install casks
     homebrew_cask: name="{{ item }}" state=present
     with_items:
       - alfred
       - iterm2
+      - font-inconsolata
+      - font-source-code-pro
+      - font-terminus
 
   - role: dock
     apps:
